--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Guitar Heroes</string>
     <string name="hello_world">Hello World!</string>
+    <string name="hello_square"></string>
+    <string name="hello_round"></string>
 </resources>
