--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Guitar Heroes</string>
     <string name="action_settings">Settings</string>
+    <string name="recent_songs">Recent Songs</string>
+    <string name="favorited_songs">Favorited Songs</string>
 </resources>
